--- a/quiz.html
+++ b/quiz.html
@@ -26,11 +26,11 @@
                     <label for="name">Student Name</label>
                     <input type="text" id="name" name="name" required>
                 </div>
-                <div class="">
+                <div class="info">
                     <label for="email">Student Email</label>
                     <input type="email" id="email" name="email" required>
                 </div>
-                <div class="date">
+                <div class="info">
                     <label for="date">Date Of Birth</label>
                     <input type="date" id="date" name="date" required>
                 </div>
