--- a/quiz.html
+++ b/quiz.html
@@ -88,7 +88,7 @@
     </main>
     <footer>
         <address>
-            Contact us at <a href="mailto:antechcypherx@gmail.com">Email us</a><br>
+         <a href="mailto:antechcypherx@gmail.com">Email us</a><br>
             Antech Tech Hub<br>
             Machakos, Kenya<br>
             Phone: +254 714452396<br>
