--- a/quiz.html
+++ b/quiz.html
@@ -38,7 +38,7 @@
             <section role="region" aria-labelledby="html">
                 <h2 id="html">HTML Questions</h2>
                 <div class="question">
-                    <p>1. What does HTML stand for?</p>
+                    <span class="sr-only">Question</span><p>1. What does HTML stand for?</p>
                     <input type="radio" id="q1a" name="q1" value="a" required>
                     <label for="q1a">Hyper Text Markup Language</label><br>
                     <input type="radio" id="q1b" name="q1" value="b">
@@ -47,7 +47,7 @@
                     <label for="q1c">Hyperlinks and Text Markup Language</label>
                 </div>
                 <div class="question">
-                    <p>2. Who is making the Web standards?</p>
+                    <span class="sr-only">Question</span><p>2. Who is making the Web standards?</p>
                     <input type="radio" id="q2a" name="q2" value="a" required>
                     <label for="q2a">Mozilla</label><br>
                     <input type="radio" id="q2b" name="q2" value="b">
@@ -59,7 +59,7 @@
             <section role="region" aria-labelledby="css">
                 <h2 id="css">CSS Questions</h2>
                 <div class="question">
-                    <p>3. What does CSS stand for?</p>
+                    <span class="sr-only">Question</span><p>3. What does CSS stand for?</p>
                     <input type="radio" id="q3a" name="q3" value="a" required>
                     <label for="q3a">Creative Style Sheets</label><br>
                     <input type="radio" id="q3b" name="q3" value="b">
@@ -68,7 +68,7 @@
                     <label for="q3c">Computer Style Sheets</label>
                 </div>
                 <div class="question">
-                    <p>4. Which HTML tag is used to define an internal style sheet?</p>
+                    <span class="sr-only">Question</span><p>4. Which HTML tag is used to define an internal style sheet?</p>
                     <input type="radio" id="q4a" name="q4" value="a" required>
                     <label for="q4a">&lt;style&gt;</label><br>
                     <input type="radio" id="q4b" name="q4" value="b">
